[package]
name = "devproxy"
version = "0.1.1"
edition = "2024"
authors = ["CarlG"]
license = "MIT OR Apache-2.0"
description = "A local development proxy for testing different network conditions"
repository = "https://github.com/theCarlG/devproxy"
keywords = ["devproxy", "proxy", "development"]

[dependencies]
anyhow = "1.0.92"
clap = { version = "4.5.20", features = ["derive", "env"] }
fastrand = "2.1.1"
humansize = "2.1.3"
tokio = { version = "1.41.0", features = ["rt-multi-thread", "net", "tracing", "io-util", "rt", "mio", "tokio-macros", "macros", "time"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
time = { version = "0.3.34", features = ["formatting", "parsing"] }
